--- a/package.json
+++ b/package.json
@@ -22,5 +22,11 @@
     "webpack": "^2.2.1",
     "webpack-dashboard": "^0.2.1",
     "webpack-merge": "^2.3.1"
+  },
+  "dependencies": {
+    "redux": "^3.6.0",
+    "redux-logger": "^2.8.1",
+    "redux-saga": "^0.14.3",
+    "regenerator-runtime": "^0.10.3"
   }
 }
